--- a/app/templates/recipecard.html
+++ b/app/templates/recipecard.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
-
-{% block content %}
-
+{% block head %}
+{{super()}}
+{% endblock %}
+{% block body %}
+{{super()}}
 <header>
     <h2 style='text-align:center'>Recipe - {add name} </h2><br />
 </header>
