--- a/app/templates/recipecard.html
+++ b/app/templates/recipecard.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block head %}
 {{super()}}
+<title>Recipe card</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap/css/bootstrap.min.css')}}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/recipecard.css')}}">
+<link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&amp;display=swap">
+
 {% endblock %}
 {% block body %}
 {{super()}}
@@ -8,68 +15,56 @@
     <h2 style='text-align:center'>Recipe - {add name} </h2><br />
 </header>
 
-<section id="main">
-    <div class="inner">
-
-        <!-- One -->
-        <section id="one" class="wrapper style1">
-
-            <div class="image fit flush">
-                <!-- <img src="images/pic01.jpg" alt="" /> -->
-            </div>
-            <header class="special">
-                <h2>Ingredients</h2>
-                <!-- <p>vehicula urna sed justo bibendum</p> -->
-            </header>
-            <div class="content">
-                <ol>
-                    <li>hujykvbcge</li>
-                    <li>hujykvbcge</li>
-                    <li>hujykvbcge</li>
-                </ol>
-            </div>
-        </section>
-
-        <section id="three" class="wrapper">
-            <div class="spotlight">
-                <div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
-                <div class="inner">
-                    <h3>Time</h3>
-                    <h4>Preparation</h4>
-                    <h4>Cooking</h4>
-                    <h3>Ratings</h3>
-                    <h4>Difficulty</h4>
-                    <h4>Taste</h4>
-                    <!-- <h3>Attempts</h3>
-                    <h4>Passed</h4>
-                    <h4>Failed</h4> -->
+<h1 class="text-center text-white d-none d-lg-block site-heading"></h1>
+<section class="page-section">
+    <div class="container">
+        <div class="product-item">
+            <div class="d-flex product-item-title">
+                <div class="d-flex me-auto bg-faded p-5 rounded"
+                    style="padding-right: 0px;margin-bottom: 70px;margin-right: 49px;padding-left: 78px;margin-left: -2px;">
+                    <h2 class="section-heading mb-0"><span class="section-heading-lower">RECIPE NAME</span></h2>
                 </div>
+            </div><img class="img-fluid d-flex mx-auto product-item-img mb-3 mb-lg-0 rounded"
+                src="{{ url_for('static', filename='assets/img/pic06.jpg')}}"
+                style="padding-top: 33px;margin-top: 17px;padding-bottom: 33px;padding-right: 14px;margin-left: 8px;padding-left: 17px;">
+            <div class="bg-faded p-5 rounded"
+                style="margin-top: 28px;margin-left: 76px;margin-right: 75px;margin-bottom: 118px;padding-top: 74px;">
+                <p class="mb-0">Description</p>
             </div>
-            <div class="spotlight alt">
-                <div class="image flush"><img src="images/pic07.jpg" alt="" /></div>
-                <div class="inner">
-                    <h3>Instructions</h3>
-                    <ol>
-                        <li>hujykvbcge</li>
-                        <li>hujykvbcge</li>
-                        <li>hujykvbcge</li>
-                    </ol>
-                </div>
-            </div>
-            <div class="spotlight">
-                <div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
-                <div class="inner">
-                    <h3>Notes</h3>
-                    <ol>
-                        <li>hujykvbcge</li>
-                        <li>hujykvbcge</li>
-                        <li>hujykvbcge</li>
-                    </ol>
-                </div>
-        </section>
-
+        </div>
     </div>
 </section>
+<section class="page-section">
+    <div class="container">
+        <div class="product-item">
+            <div class="d-flex product-item-title"></div>
+            <div class="bg-faded p-5 rounded" style="margin-bottom: 56px;margin-left: 76px;margin-right: 75px;">
+                <p class="mb-0">stuffs</p>
+            </div>
+            <div class="bg-faded p-5 rounded" style="margin-top: 70px;margin-left: 76px;margin-right: 75px;">
+                <p class="mb-0">Ingredients</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="page-section">
+    <div class="container">
+        <div class="product-item">
+            <div class="bg-faded p-5 rounded" style="margin-bottom: 77px;margin-left: 76px;margin-right: 75px;">
+                <p class="mb-0">Steps</p>
+            </div>
+            <div class="bg-faded p-5 rounded" style="margin-left: 76px;margin-right: 75px;">
+                <p class="mb-0">Notes</p>
+            </div>
+        </div>
+    </div>
+</section>
+{% block footer %}
+{{super()}}
+
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/current-day.js"></script>
 
 
+{% endblock %}
 {% endblock %}
