--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -1,23 +1,54 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h1>Edit Profile</h1>
+{% block header %}
+<h1>Edit Recipe</h1>
+{% endblock %}
+
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
+            {{ form.name.label }}<br>
+            {{ form.name(size=32) }}<br>
+            {% for error in form.name.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>
-            {{ form.about_me.label }}<br>
-            {{ form.about_me(cols=50, rows=4) }}<br>
-            {% for error in form.about_me.errors %}
+            {{ form.group.label }}<br>
+            {{ form.group(size=32) }}<br>
+            {% for error in form.group.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.submit() }}</p>
+        <p>
+            {{ form.description.label }}<br>
+            {{ form.description(cols=50, rows=4) }}<br>
+            {% for error in form.description.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.ingredients.label }}<br>
+            {{ form.ingredients(cols=50, rows=4) }}<br>
+            {% for error in form.ingredients.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.steps.label }}<br>
+            {{ form.steps(cols=50, rows=4) }}<br>
+            {% for error in form.steps.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.notes.label }}<br>
+            {{ form.notes(cols=50, rows=4) }}<br>
+            {% for error in form.notes.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <a href="{{ url_for('groups') }}" class="button style3 fit" ><p>{{ form.submit() }}</p></a>
     </form>
 {% endblock %}
