--- a/app/templates/recipecard.html
+++ b/app/templates/recipecard.html
@@ -12,7 +12,7 @@
 {% block body %}
 {{super()}}
 <header>
-    <h2 style='text-align:center'>Recipe - {add name} </h2><br />
+    <h2 style='text-align:center'>{{ recipe.name }}</h2><br />
 </header>
 
 <h1 class="text-center text-white d-none d-lg-block site-heading"></h1>
@@ -29,7 +29,7 @@
                 style="padding-top: 33px;margin-top: 17px;padding-bottom: 33px;padding-right: 14px;margin-left: 8px;padding-left: 17px;">
             <div class="bg-faded p-5 rounded"
                 style="margin-top: 28px;margin-left: 76px;margin-right: 75px;margin-bottom: 118px;padding-top: 74px;">
-                <p class="mb-0">Description</p>
+                <p class="mb-0">Description {{ recipe.description }}</p>
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@
                 <p class="mb-0">stuffs</p>
             </div>
             <div class="bg-faded p-5 rounded" style="margin-top: 70px;margin-left: 76px;margin-right: 75px;">
-                <p class="mb-0">Ingredients</p>
+                <p class="mb-0">Ingredients {{ recipe.ingredients }}</p>
             </div>
         </div>
     </div>
@@ -51,10 +51,10 @@
     <div class="container">
         <div class="product-item">
             <div class="bg-faded p-5 rounded" style="margin-bottom: 77px;margin-left: 76px;margin-right: 75px;">
-                <p class="mb-0">Steps</p>
+                <p class="mb-0">Steps {{ recipe.steps }}</p>
             </div>
             <div class="bg-faded p-5 rounded" style="margin-left: 76px;margin-right: 75px;">
-                <p class="mb-0">Notes</p>
+                <p class="mb-0">Notes {{ recipe.notes }}</p>
             </div>
         </div>
     </div>
