--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -1,54 +1,54 @@
 {% extends "base.html" %}
 
-{% block body %}
 {% block header %}
 <h1>Edit Recipe</h1>
 {% endblock %}
 
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.name.label }}<br>
-            {{ form.name(size=32) }}<br>
-            {% for error in form.name.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.group.label }}<br>
-            {{ form.group(size=32) }}<br>
-            {% for error in form.group.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.description.label }}<br>
-            {{ form.description(cols=50, rows=4) }}<br>
-            {% for error in form.description.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.ingredients.label }}<br>
-            {{ form.ingredients(cols=50, rows=4) }}<br>
-            {% for error in form.ingredients.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.steps.label }}<br>
-            {{ form.steps(cols=50, rows=4) }}<br>
-            {% for error in form.steps.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.notes.label }}<br>
-            {{ form.notes(cols=50, rows=4) }}<br>
-            {% for error in form.notes.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <a href="{{ url_for('groups') }}" class="button style3 fit" ><p>{{ form.submit() }}</p></a>
-    </form>
+{% block body %}
+<form method="POST" enctype="multipart/form-data">
+    {{ form.hidden_tag() }}
+    
+    {# Display errors if any #}
+    {% for field, errors in form.errors.items() %}
+    {% for error in errors %}
+    <div class="alert alert-danger">{{ error }}</div>
+    {% endfor %}
+    {% endfor %}
+    
+    <div class="form-group">
+        {{ form.name.label(class="formLabel") }}
+        {{ form.name(class="form-control") }}
+    </div>
+    
+    <div class="form-group">
+        {{ form.group.label(class="formLabel") }}
+        {{ form.group(class="form-control") }}
+    </div>
+    <div class="form-group">
+        {{ form.image.label(class="formLabel") }}
+        {{ form.image(class="form-control-file") }}
+    </div>
+    
+    <div class="form-group">
+        {{ form.description.label(class="formLabel") }}
+        {{ form.description(class="form-control", rows=4) }}
+    </div>
+    
+    <div class="form-group">
+        {{ form.ingredients.label(class="formLabel") }}
+        {{ form.ingredients(class="form-control", rows=4) }}
+    </div>
+    
+    <div class="form-group">
+        {{ form.steps.label(class="formLabel") }}
+        {{ form.steps(class="form-control", rows=4) }}
+    </div>
+    
+    <div class="form-group">
+        {{ form.notes.label(class="formLabel") }}
+        {{ form.notes(class="form-control", rows=4) }}
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Save Changes</button>
+</form>
 {% endblock %}
