--- a/app/templates/groups.html
+++ b/app/templates/groups.html
@@ -28,7 +28,7 @@
                 <div class="inner">
                     <h3>Add New Recipe</h3>
                     <p>description</p>
-                    <a href="{{ url_for('new_recipe') }}" class="button style3 fit" data-poptrox="youtube,800x400">Recipe</a>
+                    <a href="{{ url_for('new_recipe') }}" class="button style3 fit">Recipe</a>
                 </div>
             </div>
             {% for recipe in recipes %}
@@ -37,7 +37,7 @@
                 <div class="inner">
                     <h3>{{ recipe.name }}</h3>
                     <p>{{ recipe.description }}</p>
-                    <a href="{{ url_for('recipecard') }}" class="button style3 fit" data-poptrox="youtube,800x400">Recipe</a>
+                    <a href="{{ url_for('recipe', name=recipe.name, recipe=recipe) }}" class="button style3 fit" >Recipe</a>
                 </div>
             </div>
             {% endfor %}
