--- a/app/templates/recipecard.html
+++ b/app/templates/recipecard.html
@@ -25,7 +25,7 @@
                     <h2 class="section-heading mb-0"><span class="section-heading-lower">RECIPE NAME</span></h2>
                 </div>
             </div><img class="img-fluid d-flex mx-auto product-item-img mb-3 mb-lg-0 rounded"
-                src="{{ url_for('static', filename='assets/img/pic06.jpg')}}"
+                src="{{ recipe.image}}"
                 style="padding-top: 33px;margin-top: 17px;padding-bottom: 33px;padding-right: 14px;margin-left: 8px;padding-left: 17px;">
             <div class="bg-faded p-5 rounded"
                 style="margin-top: 28px;margin-left: 76px;margin-right: 75px;margin-bottom: 118px;padding-top: 74px;">
@@ -59,6 +59,9 @@
         </div>
     </div>
 </section>
+
+<a href="{{ url_for('edit_recipe', name=recipe.name, recipe=recipe) }}" class="button style3 fit" >Edit Recipe</a>
+
 {% block footer %}
 {{super()}}
 
